Basic version. Discussed changed implemented and debugging done.

--- a/app/views/user_mailer/admin_notify_uploaded_after.html.erb
+++ b/app/views/user_mailer/admin_notify_uploaded_after.html.erb
@@ -2,7 +2,7 @@
 <!-- saved from url=(0105)https://upm3.createsend.com/t/ViewEmailInIFrame/j/138A9D92A0A8D8812540EF23F30FEDED/C67FD2F38AC4859C/?tx=0 -->
 <html style="margin: 0px; padding: 0px; height: 100%;" xmlns="http://www.w3.org/1999/xhtml"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>After the Mobility - Transcript of Records and Attendance Certificate uploaded</title>
+  <title>After the Mobility - Documents uploaded</title>
   <!--[if !mso]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge"><!--<![endif]-->
   <meta name="viewport" content="width=device-width"><style type="text/css">
   @media only screen and (min-width: 620px){.wrapper{min-width:600px !important}.wrapper h1{}.wrapper h1{font-size:64px !important;line-height:63px !important}.wrapper h2{}.wrapper h2{font-size:30px !important;line-height:38px !important}.wrapper h3{}.wrapper h3{font-size:22px !important;line-height:31px !important}.column{}.wrapper .size-8{font-size:8px !important;line-height:14px !important}.wrapper .size-9{font-size:9px !important;line-height:16px !important}.wrapper .size-10{font-size:10px !important;line-height:18px !important}.wrapper .size-11{font-size:11px !important;line-height:19px !important}.wrapper .size-12{font-size:12px !important;line-height:19px !important}.wrapper .size-13{font-size:13px !important;line-height:21px !important}.wrapper .size-14{font-size:14px !important;line-height:21px !important}.wrapper .size-15{font-size:15px !important;line-height:23px
@@ -471,7 +471,7 @@
 
             <div style="Margin-left: 20px;Margin-right: 20px;">
               <div style="mso-line-height-rule: exactly;mso-text-raise: 4px;">
-                <h1 class="size-64" style="Margin-top: 0;Margin-bottom: 20px;font-style: normal;font-weight: normal;color: #000;font-size: 44px;line-height: 50px;font-family: avenir,sans-serif;text-align: center;" lang="x-size-64"><span class="font-avenir"><font color="#ffffff"><strong>Transcript of Records & Attendance Certificate uploaded</strong></font></span></h1>
+                <h1 class="size-64" style="Margin-top: 0;Margin-bottom: 20px;font-style: normal;font-weight: normal;color: #000;font-size: 44px;line-height: 50px;font-family: avenir,sans-serif;text-align: center;" lang="x-size-64"><span class="font-avenir"><font color="#ffffff"><strong>Your documents have been uploaded</strong></font></span></h1>
               </div>
             </div>
 
@@ -507,7 +507,7 @@
                 <span style="color:#18527c"><strong>Hi, </strong></span>
               </h2>
               <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #18527c;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
-                Thank you for your patience. You can now find your Transcript of Records and your Attendance Certificate on the ETSIT-Erasmus app.
+                Thank you for your patience. You can now find your final mobility documents on the ETSIT-Erasmus app.
               </h2>
 
             </div>
